:bug: Fix dependency related changes

--- a/Resources/views/Settings/manage.html.twig
+++ b/Resources/views/Settings/manage.html.twig
@@ -1,4 +1,4 @@
-{% extends 'DmishhSettingsBundle::layout.html.twig' %}
+{% extends '@DmishhSettings/layout.html.twig' %}
 
 {% block content %}
     <h1>{% trans from 'settings' %}settings{% endtrans %}</h1>
